# Website-test

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  messages.txt
.claude/: settings.local.json
.github/workflows/: contact-form.yml  deploy.yml
docs/: index.html  styles.css
docs/contact/: index.html
docs/modeling/: index.html
docs/modeling/groupshots/: index.html
docs/modeling/headshots/: index.html
src/: generate_static.rs  main.rs
templates/: base.html  index.html  styles.css
templates/Behind the scenes/: behind-the-scenes.html  subtitle.txt
templates/acting/: acting.html  youtubeLinks.txt
templates/bio/: bio.html
templates/contact/: contact.html
templates/headshots/: headshots.html  subtitle.txt
templates/modeling/: modeling.html
templates/modeling/Athletic swimwear/images/: Links.txt
templates/modeling/groupshots/: groupshots.html  subtitle.txt
templates/modeling/groupshots/images/: Links.txt
templates/music/: music.html  youtubeLinks.txt
templates/reviews/: reviews.html  reviews.yaml
